0024869: OCAF testing framework extending

OCAF testing framework extending.
Test case for issue CR24869